## v0.5.2

* Upgrade to stackster 0.3.0
* Corrected handling of attributes on stack creation

## v0.5.1:

* Corrected the use of the domain attribute in URLs during deployments
* Corrected the use of the force option during deployments
* Added help text on SSH usage to the deploy command
* Corrected the acceptable options for the protect command

## v0.5.0:

* Updated the update command so it accepts a force option
* Refactored deployments to read bucket_prefix and domain from attributes instead of the yaml file
* Added a protect command that allows users to toggle whether stacks should be protected from destroy calls
* Refactored the deployment locking logic
* Corrected the destroy command so it no longer creates a deployment
* Gracefully exit if the .simple_deploy.yml file is missing or corrupt
* Corrected the update command so it now checks the deployment lock at the beginning of the process

## v0.4.8:

* Added as_command_args option to attributes cli

## v0.4.7:

* Added specs
* Updated deployment to set primary host properly in classic
* Updated ssh to return classic commands properly

## v0.4.6:

* Added spec tests
* Passing logger object into Capistrano deploy
* Updated logger to accept puts from Capistrano
* Refactored deployment
* Added support for both classic & vpc deployments
* Removed unused stack_reader & stack_lister classes

## v0.4.5:

* Corrected SSL verification options

## v0.4.4:

* Set verify SSL to false for real

## v0.4.3:

* Gracefully exit if no notification settings
* Send info level notification starting message
* Set verify SSL to false

## v0.4.2:

* Upgrade to stackster v0.2.9
* Added -v to main cli options

## v0.4.1:

* Added notifier class and campfire notifications
* Added primary host env to deployment command
* Upgraded to stackster v0.2.8

## v0.4.0:

* Added support for passing updates with deploy command
* Added support for deploying updates to multiple stacks
* Updated log outputs
* Abstracted CLI into individual classes
